# swarmesh

./: .env.example  .gitignore  LICENSE  NERVE.md  README.md  ROADMAP.md  __init__.py  betting_agent.py  code_agent.py  crawl4ai_agent.py  crypto_agent.py  data_agent.py  deploy.sh  dns_agent.py  email_agent.py  feed_agent.py  geo_agent.py  github_agent.py  image_agent.py  index.html  meshpay.py  monitor_agent.py  node.py  pdf_agent.py  port_agent.py  pyproject.toml  recon_agent.py  screenshot_agent.py  solana_agent.py  task_api.py  task_feeder.py  telegram_login.py  text_agent.py  translate_agent.py  yt_agent.py
agents/: data_agent.py
core/: __init__.py  escrow.py  storage.py  wallet.py
examples/: agent_worker.py
landing/: index.html
network/: discovery.py
payments/: __init__.py  pay.py
sdk/: __init__.py  client.py  decorator.py
sdk/python/: LICENSE  README.md  osint_phone.py  pyproject.toml  setup.py  social_poster.py
sdk/python/swarmesh/: __init__.py
swarmesh/: __main__.py
swarmesh/agents/: runner.py  scraper.py
swarmesh/core/: protocol.py  signing.py  task.py
swarmesh/examples/: agent_buyer.py
swarmesh/network/: __init__.py  registry.py  reputation.py
swarmesh/sdk/: server.py
tests/: test_core.py  test_e2e.py  test_mainnet_payment.py  test_real_task.py
